# conversor-audio-somdrive

./: .env.example  .gitignore  App.tsx  CHECKSUMS_SHA256.txt  README.md  backgroundMaskHistory.ts  backgroundRemovalSupport.ts  excelCellFormatter.ts  excelPageCalculator.ts  excelPrintSettings.ts  firebase-applet-config.json  firebase-blueprint.json  firebase.ts  firestore.rules  imageCropCalculations.ts  imageCropPresets.ts  imageFileName.ts  imageFormatSupport.ts  imageOrientationUtils.ts  imageResizeCalculations.ts  imageResizePresets.ts  imageTransformCommands.ts  imageWatermarkCalculations.ts  imageWatermarkPresets.ts  index.html  metadata.json  package-lock.json  package.json  pageRangeParser.ts  pdfTextCleaner.ts  pdfTextExporter.ts  pdfTextLayout.ts  server.ts  storage.rules  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: build-somdrive-desktop.yml
api/: ads-delete-object.ts  ads-presigned-upload.ts  ads-public-image.ts  ads-track-click.ts  ads-upload-proxy.ts  health.ts
api/admin/: analytics.ts
public/: COLE-NO-INDEX-HTML.txt  LEIA-ME.txt  ffmpeg-core-v3.wasm  ffmpeg-worker-v3.js  robots.txt  site.webmanifest  sitemap.xml
somdrive-desktop/: README_DESKTOP.md  README_WINDOWS.md  index.html  package.json  vite.config.ts
somdrive-desktop/src/: App.tsx  index.css
somdrive-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
somdrive-desktop/src-tauri/capabilities/: default.json
somdrive-desktop/src-tauri/src/: main.rs
src/: App.tsx  index.css  temp-get-ads.ts  types.ts
src/components/: AdBanner.tsx  AdminBrandingManager.tsx  (+3 more)
(+59 files in other folders)
