[package]
name = "somdrive-desktop"
version = "1.0.0"
description = "Conversor SomDrive Desktop"
authors = ["SomDrive Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["image-ico"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
open = "5.1"
tokio = { version = "1", features = ["full"] }
